--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -8,6 +8,8 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "scripts": {
+    "prepack": "yarn run build",
+    "prepublish": "yarn run build",
     "test": "cross-env SKIP_PREFLIGHT_CHECK=true CI=1 react-scripts test",
     "test:coverage": "cross-env CI=1 SKIP_PREFLIGHT_CHECK=true react-scripts test --coverage",
     "test:watch": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts test --watch",
@@ -22,7 +24,6 @@
     "storybook:build": "build-storybook",
     "storybook:build:release": "cross-env STORYBOOK_BUILD_MODE=production build-storybook -o ../../docs/storybook",
     "analyze": "yarn run g:analyze 'dist/index.js'",
-    "prepublish": "yarn run build",
     "preversion": "yarn run storybook:build:release",
     "version": "git add ../../docs"
   },
