--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -73,7 +73,7 @@
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
-    "sass": "^1.52.1",
+    "sass-embedded": "^1.52.2",
     "sass-loader": "^12.3.0",
     "style-loader": "^1.3.0"
   },
