--- a/packages/discovery-styles/package.json
+++ b/packages/discovery-styles/package.json
@@ -30,6 +30,6 @@
   "devDependencies": {
     "@types/prettier": "^2",
     "prettier": "^2.4.1",
-    "sass": "^1.52.1"
+    "sass-embedded": "^1.52.2"
   }
 }
