--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -30,6 +30,7 @@
     "dist"
   ],
   "dependencies": {
+    "@react-hook/resize-observer": "^1.2.6",
     "classnames": "^2.2.6",
     "debounce": "^1.2.0",
     "dompurify": "^2.0.17",
