--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -38,7 +38,7 @@
     "htmlparser2": "^4.0.0",
     "lodash": "^4.17.21",
     "mustache": "^3.1.0",
-    "pdfjs-dist": "^2.2.228",
+    "pdfjs-dist": "2.6.347",
     "react-error-boundary": "^1.2.5",
     "react-resize-detector": "^4.2.1",
     "react-virtualized": "9.21.2",
@@ -58,7 +58,6 @@
     "@storybook/source-loader": "^5.3.21",
     "@svgr/rollup": "^5.5.0",
     "@types/marked": "^4",
-    "@types/pdfjs-dist": "2.1.7",
     "@types/uuid": "^8",
     "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
