--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -59,6 +59,7 @@
     "@svgr/rollup": "^5.5.0",
     "@types/marked": "^4",
     "@types/uuid": "^8",
+    "canvas": "^2.9.3",
     "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
     "madge": "^5.0.1",
@@ -70,7 +71,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "sass-loader": "^10.2.1",
-    "style-loader": "^1.3.0"
+    "style-loader": "^1.3.0",
+    "web-streams-polyfill": "^3.2.1"
   },
   "peerDependencies": {
     "@carbon/icons": ">= 10.5.0 < 11",
