--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -38,7 +38,7 @@
     "htmlparser2": "^4.0.0",
     "lodash": "^4.17.21",
     "mustache": "^3.1.0",
-    "pdfjs-dist": "^2.2.228",
+    "pdfjs-dist": "2.6.347",
     "react-error-boundary": "^1.2.5",
     "react-resize-detector": "^4.2.1",
     "react-virtualized": "9.21.2",
@@ -58,8 +58,8 @@
     "@storybook/source-loader": "^5.3.21",
     "@svgr/rollup": "^5.5.0",
     "@types/marked": "^4",
-    "@types/pdfjs-dist": "2.1.7",
     "@types/uuid": "^8",
+    "canvas": "^2.9.3",
     "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
     "madge": "^5.0.1",
@@ -71,7 +71,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "sass-loader": "^10.2.1",
-    "style-loader": "^1.3.0"
+    "style-loader": "^1.3.0",
+    "web-streams-polyfill": "^3.2.1"
   },
   "peerDependencies": {
     "@carbon/icons": ">= 10.5.0 < 11",
