feat: allow displaying multiple passages from each document
- adjustments from new designs
- review changes
- fix tests

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/dompurify": "^0.0.33",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
+    "@types/md5": "2.3.2",
     "@types/mustache": "^0.8.32",
     "@types/node": "^16.11.59",
     "@types/react": "^17.0.38",
@@ -62,6 +63,7 @@
     "lerna-update-wizard": "^0.17.8",
     "lint-staged": "^13.0.3",
     "lorem-ipsum": "^2.0.3",
+    "md5": "^2.3.0",
     "prettier": "^2.4.1",
     "proper-url-join": "^2.1.1",
     "raw-loader": "^4.0.2",
