--- a/package.json
+++ b/package.json
@@ -36,24 +36,23 @@
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-virtualized": "^9.21.11",
     "@types/seedrandom": "^3.0.1",
-    "@types/testing-library__cypress": "^5.0.8",
+    "@types/testing-library__cypress": "^5.0.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "audit-ci": "^5.1.2",
-    "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.21.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-no-only-tests": "^2.6.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "fast-xml-parser": "^3.14.0",
     "gh-pages": "^2.1.1",
     "husky": "^7.0.4",
@@ -67,7 +66,6 @@
     "proper-url-join": "^2.1.1",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
-    "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-test-renderer": "^17.0.2",
@@ -75,10 +73,9 @@
     "seedrandom": "^3.0.5",
     "source-map-explorer": "2.0.1",
     "ts-loader": "^6.2.1",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.2",
     "vue": "^2.6.11",
-    "webpack": "4.41.2",
+    "webpack": "5.72.1",
     "yarnhook": "0.5.2-0"
   },
   "lint-staged": {
@@ -107,5 +104,8 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@3.1.0"
+  "packageManager": "yarn@3.2.3",
+  "resolutions": {
+    "react-scripts@^5.0.1": "patch:react-scripts@npm:5.0.1#.yarn/patches/react-scripts-npm-5.0.1-d06bd2d5ad"
+  }
 }
