--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -8,6 +8,8 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "scripts": {
+    "prepack": "yarn run build",
+    "prepublish": "yarn run build",
     "test": "cross-env SKIP_PREFLIGHT_CHECK=true CI=1 react-scripts test",
     "test:coverage": "cross-env CI=1 SKIP_PREFLIGHT_CHECK=true react-scripts test --coverage",
     "test:watch": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts test --watch",
@@ -18,11 +20,10 @@
     "eslint": "yarn run g:eslint --quiet '{src,.storybook}/**/*.{js,jsx,ts,tsx}'",
     "lint": "yarn run circular && yarn run eslint",
     "start": "rollup -c -w",
-    "storybook": "start-storybook --ci --port=9002 -s ../../node_modules/pdfjs-dist",
+    "storybook": "start-storybook --ci --port=9002",
     "storybook:build": "build-storybook",
     "storybook:build:release": "cross-env STORYBOOK_BUILD_MODE=production build-storybook -o ../../docs/storybook",
     "analyze": "yarn run g:analyze 'dist/index.js'",
-    "prepublish": "yarn run build",
     "preversion": "yarn run storybook:build:release",
     "version": "git add ../../docs"
   },
@@ -31,6 +32,7 @@
   ],
   "dependencies": {
     "@react-hook/size": "^2.1.2",
+    "buffer": "^6.0.3",
     "classnames": "^2.2.6",
     "debounce": "^1.2.0",
     "dompurify": "^2.0.17",
@@ -50,12 +52,15 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-url": "^6.1.0",
-    "@storybook/addon-actions": "^5.3.21",
-    "@storybook/addon-docs": "^5.3.21",
-    "@storybook/addon-knobs": "^5.3.21",
-    "@storybook/core": "^5.3.21",
-    "@storybook/react": "^5.3.21",
-    "@storybook/source-loader": "^5.3.21",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-docs": "^6.5.12",
+    "@storybook/addon-knobs": "^6.4.0",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/core": "^6.5.12",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.12",
+    "@storybook/source-loader": "^6.5.12",
     "@svgr/rollup": "^5.5.0",
     "@types/marked": "^4",
     "@types/pdfjs-dist": "2.1.7",
@@ -64,14 +69,15 @@
     "css-loader": "^3.4.2",
     "madge": "^5.0.1",
     "marked": "^4.0.10",
-    "node-sass": "^6.0.1",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "rollup": "^2.57.0",
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
+    "sass-embedded": "^1.52.2",
     "sass-loader": "^10.2.1",
-    "style-loader": "^1.3.0"
+    "style-loader": "^1.3.0",
+    "web-streams-polyfill": "^3.2.1"
   },
   "peerDependencies": {
     "@carbon/icons": ">= 10.5.0 < 11",
