--- a/packages/discovery-styles/package.json
+++ b/packages/discovery-styles/package.json
@@ -7,8 +7,9 @@
   "repository": "https://github.com/watson-developer-cloud/discovery-components",
   "main": "scss/index.scss",
   "scripts": {
-    "build": "node-sass --importer=../../node_modules/node-sass-tilde-importer --source-map=true scss/index.scss css/index.css",
+    "prepack": "yarn run build",
     "prepublish": "yarn run build",
+    "build": "sass --load-path=node_modules --load-path=../../node_modules scss/index.scss css/index.css",
     "start": "yarn run build --watch",
     "analyze": "yarn run g:analyze css/index.css",
     "update-styles-from-pdfjs": "scripts/update-styles-from-pdfjs.sh"
@@ -28,8 +29,7 @@
   },
   "devDependencies": {
     "@types/prettier": "^2",
-    "node-sass": "^6.0.1",
-    "node-sass-tilde-importer": "^1.0.2",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "sass": "^1.54.9"
   }
 }
