--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-env": "^7.19.1",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@testing-library/jest-dom": "^5.16.1",
@@ -30,12 +30,12 @@
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
     "@types/mustache": "^0.8.32",
-    "@types/node": "^12.7.3",
+    "@types/node": "^16.11.59",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-virtualized": "^9.21.11",
-    "@types/seedrandom": "^3.0.1",
+    "@types/seedrandom": "^3.0.2",
     "@types/testing-library__cypress": "^5.0.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -43,6 +43,7 @@
     "axios": "^0.21.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
+    "doctoc": "^2.2.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
@@ -50,7 +51,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-no-only-tests": "^2.6.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "fast-xml-parser": "^3.14.0",
@@ -59,9 +60,8 @@
     "ibm-watson": "^6.2.1",
     "lerna": "^4.0.0",
     "lerna-update-wizard": "^0.17.8",
-    "lint-staged": "^9.2.5",
+    "lint-staged": "^13.0.3",
     "lorem-ipsum": "^2.0.3",
-    "markdown-toc": "^1.2.0",
     "prettier": "^2.4.1",
     "proper-url-join": "^2.1.1",
     "raw-loader": "^4.0.2",
@@ -80,16 +80,13 @@
   },
   "lint-staged": {
     "{packages,examples}/**/*.{json,css,scss,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "{packages,examples}/**/*.{js,jsx,ts,tsx}": [
-      "yarn lint --fix",
-      "git add"
+      "yarn lint --fix"
     ],
     "README.md": [
-      "markdown-toc -i",
-      "git add"
+      "doctoc"
     ]
   },
   "browserslist": {
