--- a/lerna.json
+++ b/lerna.json
@@ -2,14 +2,15 @@
   "packages": [
     "packages/*"
   ],
-  "version": "3.1.0",
+  "version": "3.2.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "command": {
     "publish": {
       "conventionalCommits": true,
       "allowBranch": [
-        "master"
+        "master",
+        "release/*"
       ]
     },
     "version": {
