build: set absolute SASS_PATH
... so we no longer get webpack warnings about relative paths for SCSS includes.

--- a/examples/discovery-search-app/.env
+++ b/examples/discovery-search-app/.env
@@ -1,2 +1,4 @@
-SASS_PATH=node_modules:src
+# SASS_PATH is set in NPM scripts in `package.json`, due to issue with
+# Webpack v5 and sass-loader.
+# @see https://github.com/facebook/create-react-app/issues/12329
 REACT_APP_PROJECT_ID=
