--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,7 +2,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "master", "january_fix_pack", "release/1.1.0", "release/1.2.0", "release/1.3.0", "release/3.2.0" ]
+    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
   schedule:
