--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -22,8 +22,8 @@
   },
   "dependencies": {
     "@carbon/icons": "^10.5.0",
-    "@ibm-watson/discovery-react-components": "^4.3.0",
-    "@ibm-watson/discovery-styles": "^4.2.1",
+    "@ibm-watson/discovery-react-components": "workspace:*",
+    "@ibm-watson/discovery-styles": "workspace:*",
     "body-parser": "^1.19.0",
     "carbon-components": "~10.46.0",
     "carbon-components-react": "~7.46.0",
