--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -5,8 +5,12 @@
   "license": "Apache-2.0",
   "author": "IBM Corp.",
   "repository": "https://github.com/watson-developer-cloud/discovery-components",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/discovery-react-components.umd.cjs",
+  "module": "dist/discovery-react-components.js",
   "scripts": {
     "prepack": "yarn run build",
     "prepublish": "yarn run build",
@@ -15,11 +19,11 @@
     "test:watch": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts test --watch",
     "test:debug": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts --inspect-brk test --runInBand --no-cache",
     "circular": "madge --circular src/*",
-    "build": "rollup -c",
+    "build": "vite build",
     "build:app": "yarn run storybook:build --quiet",
     "eslint": "yarn run g:eslint --quiet '{src,.storybook}/**/*.{js,jsx,ts,tsx}'",
     "lint": "yarn run circular && yarn run eslint",
-    "start": "rollup -c -w",
+    "start": "vite preview",
     "storybook": "start-storybook --ci --port=9002",
     "storybook:build": "build-storybook",
     "storybook:build:release": "cross-env STORYBOOK_BUILD_MODE=production build-storybook -o ../../docs/storybook",
@@ -27,14 +31,12 @@
     "preversion": "yarn run storybook:build:release",
     "version": "git add ../../docs"
   },
-  "files": [
-    "dist"
-  ],
   "dependencies": {
     "@react-hook/size": "^2.1.2",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "debounce": "^1.2.1",
+    "debug": "^4.3.4",
     "dompurify": "^3.0.2",
     "entities": "^4.5.0",
     "htmlparser2": "^4.0.0",
@@ -47,11 +49,6 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.5",
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.5",
-    "@rollup/plugin-url": "^6.1.0",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-docs": "^6.5.12",
     "@storybook/addon-knobs": "^6.4.0",
@@ -61,22 +58,24 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.12",
     "@storybook/source-loader": "^6.5.12",
-    "@svgr/rollup": "^5.5.0",
+    "@types/debug": "^4",
     "@types/marked": "^4",
+    "@types/react": "^17",
+    "@types/react-dom": "^17",
     "@types/uuid": "^8",
+    "@vitejs/plugin-react-swc": "^3.4.1",
     "canvas": "^2.9.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "madge": "^5.0.1",
     "marked": "^4.0.10",
     "react-scripts": "^5.0.1",
-    "rollup": "^2.57.0",
-    "rollup-plugin-string": "^3.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.34.1",
     "sass-embedded": "^1.52.2",
     "sass-loader": "^12.3.0",
     "style-loader": "^1.3.0",
+    "vite": "^4.5.0",
+    "vite-plugin-svgr": "^3.3.0",
+    "vite-tsconfig-paths": "^4.2.1",
     "web-streams-polyfill": "^3.2.1"
   },
   "peerDependencies": {
