--- a/packages/discovery-react-components/tsconfig.json
+++ b/packages/discovery-react-components/tsconfig.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "outDir": "dist",
     "module": "esnext",
-    "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "sourceMap": true,
     "allowJs": false,
-    "jsx": "react",
-    "moduleResolution": "node",
+    "jsx": "react-jsx",
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -24,8 +25,10 @@
     "noEmit": true,
     "isolatedModules": true,
     "baseUrl": "src",
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "useDefineForClassFields": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "build", "dist", "rollup.config.js"]
+  "exclude": ["node_modules", "build", "dist", "rollup.config.js"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
