--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -34,7 +34,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-proxy-middleware": "^0.20.0",
-    "ibm-watson": "^7",
+    "ibm-watson": "^8.0.0",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "proper-url-join": "^2.1.1",
     "react": "^17.0.2",
@@ -47,5 +47,10 @@
     "cypress": "^10.11.0",
     "react-scripts": "^5.0.1",
     "start-server-and-test": "^2.0.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
   }
 }
