--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -11,6 +11,10 @@
   ],
   "main": "dist/discovery-react-components.umd.cjs",
   "module": "dist/discovery-react-components.js",
+  "types": "dist/discovery-react-components.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "prepack": "yarn run build",
     "prepublish": "yarn run build",
@@ -76,6 +80,7 @@
     "style-loader": "^3.3.4",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
+    "vite-plugin-dts": "^3.7.1",
     "vite-plugin-node-polyfills": "^0.19.0",
     "vite-plugin-svgr": "^3.3.0",
     "vite-tsconfig-paths": "^4.3.1",
@@ -89,10 +94,6 @@
     "ibm-watson": "^8",
     "react": ">= 16.8.0 < 18",
     "react-dom": ">= 16.8.0 < 18"
-  },
-  "jsnext:main": "dist/index.es.js",
-  "publishConfig": {
-    "access": "public"
   },
   "jest": {
     "resetMocks": false,
