build: don't rollup types, to keep breaking changes to a minimum

--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -11,7 +11,7 @@
   ],
   "main": "dist/discovery-react-components.umd.cjs",
   "module": "dist/discovery-react-components.js",
-  "types": "dist/discovery-react-components.d.ts",
+  "types": "dist/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
