build: revert baseUrl removal

--- a/packages/discovery-react-components/tsconfig.json
+++ b/packages/discovery-react-components/tsconfig.json
@@ -23,12 +23,9 @@
     "resolveJsonModule": true,
     "noEmit": true,
     "isolatedModules": true,
+    "baseUrl": "src",
     "noFallthroughCasesInSwitch": true,
-    "useDefineForClassFields": true,
-    "paths": {
-      "components/*": ["./src/components/*"],
-      "utils/*": ["./src/utils/*"]
-    }
+    "useDefineForClassFields": true
   },
   "include": ["src"],
   "exclude": ["node_modules"],
