--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,7 +62,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
       - name: Publish
         if: github.ref == 'refs/heads/master'
-        # must include --no-verify-access for automation tokens https://github.com/lerna/lerna/issues/2788
-        run: yarn run lerna publish -y --no-verify-access --create-release github
+        run: yarn run lerna publish -y --create-release github
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
