--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -36,7 +36,7 @@
     "ibm-watson": "^8.0.0",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "proper-url-join": "^2.1.1",
-    "react": "^17.0.2",
+    "react": "^18.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
@@ -50,6 +50,11 @@
   "jest": {
     "moduleNameMapper": {
       "^axios$": "axios/dist/node/axios.cjs"
+    }
+  },
+  "overrides": {
+    "carbon-components-react": {
+      "react": "^18.0.0"
     }
   }
 }
