test: get tests running again

--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -109,6 +109,9 @@
       "!src/**/__fixtures__/**",
       "!src/**/__stories__/**",
       "!src/**/*.stories.*"
-    ]
+    ],
+    "moduleNameMapper": {
+      "^pdfjs-dist$": "pdfjs-dist/legacy/build/pdf.mjs"
+    }
   }
 }
