--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -18,10 +18,10 @@
   "scripts": {
     "prepack": "yarn run build",
     "prepublish": "yarn run build",
-    "test": "cross-env SKIP_PREFLIGHT_CHECK=true CI=1 react-scripts test",
-    "test:coverage": "cross-env CI=1 SKIP_PREFLIGHT_CHECK=true react-scripts test --coverage",
-    "test:watch": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts test --watch",
-    "test:debug": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts --inspect-brk test --runInBand --no-cache",
+    "test": "cross-env SKIP_PREFLIGHT_CHECK=true CI=1 react-scripts test --env ./src/fixedJSDOMEnvironment.js",
+    "test:coverage": "cross-env CI=1 SKIP_PREFLIGHT_CHECK=true react-scripts test --env ./src/fixedJSDOMEnvironment.js --coverage",
+    "test:watch": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts test --env ./src/fixedJSDOMEnvironment.js --watch",
+    "test:debug": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts --inspect-brk test --env ./src/fixedJSDOMEnvironment.js --runInBand --no-cache",
     "circular": "madge --circular src/*",
     "build": "tsc && vite build",
     "build:app": "yarn run storybook:build --quiet",
