--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -25,8 +25,8 @@
     "@ibm-watson/discovery-react-components": "workspace:*",
     "@ibm-watson/discovery-styles": "workspace:*",
     "body-parser": "^1.20.2",
-    "carbon-components": "~10.46.0",
-    "carbon-components-react": "~7.46.0",
+    "carbon-components": "^10.58.12",
+    "carbon-components-react": "7.59.24",
     "carbon-icons": "^7.0.7",
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
