--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,6 +34,8 @@ jobs:
         run: yarn run build:apps
       - name: Test
         run: yarn run test
+        env:
+          DEBUG_PRINT_LIMIT: 50000
       - name: Archive test artifacts
         uses: actions/upload-artifact@v2
         if: failure()
