--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -13,8 +13,10 @@
     "start": "yarn setup && cross-env SKIP_PREFLIGHT_CHECK=true SASS_PATH=${PWD}/src react-scripts start",
     "lint": "yarn run g:eslint --quiet '{src,cypress}/**/*.{js,jsx,ts,tsx}' './*.{js,jsx,ts,tsx}'",
     "test:e2e": "cross-env REACT_APP_CYPRESS_MODE=true BROWSER=none CYPRESS_baseUrl=http://localhost:3000 start-server-and-test start http://localhost:3000 'cypress run'",
-    "test:unit": "cross-env SKIP_PREFLIGHT_CHECK=true CI=1 react-scripts test --env=jsdom",
+    "test:unit": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts test --env=jsdom",
+    "test:unit:ci": "yarn run test:unit --runInBand",
     "test": "yarn test:unit && yarn test:e2e",
+    "test:ci": "yarn test:unit:ci && yarn test:e2e",
     "cypress": "cross-env REACT_APP_CYPRESS_MODE=true cypress open --e2e --browser chrome",
     "server": "yarn server:setup && yarn server:run",
     "server:run": "node ./server.js",
