--- a/packages/discovery-styles/package.json
+++ b/packages/discovery-styles/package.json
@@ -12,7 +12,7 @@
     "build": "sass --load-path=node_modules --load-path=../../node_modules scss/index.scss css/index.css",
     "start": "yarn run build --watch",
     "analyze": "yarn run g:analyze css/index.css",
-    "update-styles-from-pdfjs": "scripts/update-styles-from-pdfjs.sh"
+    "update-styles-from-pdfjs": "yarn node scripts/update-styles-from-pdfjs.js"
   },
   "files": [
     "css/**/*",
