--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,9 @@ jobs:
       - name: Build Apps
         run: yarn run build:apps
       - name: Test
-        run: yarn run test
+        run: yarn run test:ci
+        env:
+          DEBUG_PRINT_LIMIT: 50000
       - name: Archive test artifacts
         uses: actions/upload-artifact@v2
         if: failure()
